# observability-project

./: README.md  gitignore.md  main.py  pattern_detector.py  pyproject.toml
observability-demo/: pyproject.toml
observability-demo/src/observability_demo/: __init__.py
