[project]
name = "observability-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "observability-demo",
]
